--- a/src/app/pages/hud-template/hud-template.page.scss
+++ b/src/app/pages/hud-template/hud-template.page.scss
@@ -649,6 +649,10 @@ ion-content {
       background: white;
       border-bottom: 1px solid #f5f5f5;
       
+      &:first-child {
+        padding-top: 10px;
+      }
+      
       &:last-child {
         border-bottom: none;
       }
